<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triple-IT</string>
    <string name="name">name</string>
    <string name="email">Email:</string>
    <string name="photo">photo</string>
    <string name="android_dev">Android Developers</string>
    <string name="ios_dev">iOS Developers</string>
    <string name="windows_dev">Windows Developers</string>
    <string name="details">Details</string>
    <string name="platform">Platform:</string>
    <string name="btn_close">Close</string>
    <string name="connecting">Connecting server</string>
    <string name="loading">Loading, please wait</string>
    <string name="connection_error_msg">Unable to fetch data from server</string>

</resources>