<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ROWLayout2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp" >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/photo"
        android:src="@drawable/no_photo" />
    
    <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/photo"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:text="@string/name"
                android:textColor="#111111"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/emailaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/photo"
                android:layout_below="@id/name"
                android:layout_marginLeft="8dp"
                android:text="@string/email"
                android:textColor="#111111"
                android:autoLink="email"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/photo"
                android:layout_below="@id/emailaddress"
                android:layout_marginLeft="8dp"
                android:text="@string/platform"
                android:textColor="#111111"
                android:textAppearance="?android:attr/textAppearanceSmall" />
    
</RelativeLayout>