<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:contentDescription="@string/photo"
        android:src="@drawable/no_photo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/photo"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bg_color"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/photo"
        android:text="@string/platform"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/bg_color"
        android:textIsSelectable="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/platform"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/photo"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/bg_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/emailaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/photo"
        android:autoLink="email"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/bg_color"
        android:textIsSelectable="true"
        android:textSize="14sp" />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/photo"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="40dp"
        android:background="@color/dialog_box_gray_line" />

    <Button
        android:id="@+id/btn_dialog_ok"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:onClick="onDialogOK"
        android:text="@string/btn_close" />

</RelativeLayout>